--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,9 +1,17 @@
+.card-container {
+    width: 100% !important;
+    display: grid;
+    grid-template-areas: "item1 item1 item1 item1";
+    grid-gap: 10px;
+}
+
 .flip-card {
     background-color: transparent;
     width: 300px;
     height: 300px;
     perspective: 1000px;
     margin: 1em auto 0 auto;
+    grid-area: item1;
 }
 
 .flip-card-inner {
@@ -63,4 +71,23 @@
     border-radius: 12px;
     cursor: pointer;
     margin: 1rem 0.5rem 1rem auto;
+}
+ul {
+}
+li a {
+    color: black;
+    text-decoration: none;
+    text-align: center;
+    align-items: center;
+    font-size: 1.25em;
+    padding: 1.25em 1.25em 0.1em 0.5em;
+    display: block;
+}
+
+.navbar-brand img {
+    width: 80px;
+    margin-bottom: 1em;
+}
+nav {
+    display: flex;
 }
